--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
         <button onclick="changeSkin('skin2.png')">Skin 2</button>
         <button onclick="changeSkin('skin3.png')">Skin 3</button>
     </div>
+    <div id="status">
+        <p>Bonheur : <span id="happiness">50</span></p>
+        <p>Faim : <span id="hunger">50</span></p>
+        <p>Énergie : <span id="energy">50</span></p>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
