--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 <body>
     <h1>Mon Tamagotchi</h1>
     <div id="tamagotchi-container">
-        <img id="tamagotchi" src="skin1.png" alt="Tamagotchi">
+        <div id="tamagotchi">
+            <div class="eye left-eye"></div>
+            <div class="eye right-eye"></div>
+            <div class="mouth"></div>
+            <div class="body"></div>
+        </div>
     </div>
     <div id="controls">
         <button onclick="feed()">Nourrir</button>
