--- a/index.html
+++ b/index.html
@@ -14,17 +14,13 @@
             <div class="eye left-eye"></div>
             <div class="eye right-eye"></div>
             <div class="mouth"></div>
+            <div class="status-overlay"></div> <!-- Ajout d'une superposition pour les animations -->
         </div>
     </div>
     <div id="controls">
         <button onclick="feed()">Nourrir</button>
         <button onclick="play()">Jouer</button>
         <button onclick="sleep()">Dormir</button>
-    </div>
-    <div id="status">
-        <p>Bonheur : <span id="happiness">50</span></p>
-        <p>Faim : <span id="hunger">50</span></p>
-        <p>Énergie : <span id="energy">50</span></p>
     </div>
     <script src="script.js"></script>
 </body>
