--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         <button onclick="play()">Jouer</button>
         <button onclick="sleep()">Dormir</button>
     </div>
+    <div id="status">
+        <p><span>Bonheur:</span> <span id="happiness">50</span></p>
+        <p><span>Faim:</span> <span id="hunger">50</span></p>
+        <p><span>Énergie:</span> <span id="energy">50</span></p>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
