--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="eye left-eye"></div>
             <div class="eye right-eye"></div>
             <div class="mouth"></div>
-            <div class="status-overlay"></div> <!-- Ajout d'une superposition pour les animations -->
+            <div class="status-overlay"></div>
         </div>
     </div>
     <div id="controls">
