--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Mon Tamagotchi</h1>
+    <h1>Mon Bébé Dragon</h1>
     <div id="tamagotchi-container">
         <div id="tamagotchi">
+            <!-- Ajouter les ailes -->
+            <div class="wing left-wing"></div>
+            <div class="wing right-wing"></div>
+            <!-- Ajouter les cornes -->
+            <div class="horn left-horn"></div>
+            <div class="horn right-horn"></div>
             <div class="body"></div>
             <div class="eye left-eye"></div>
             <div class="eye right-eye"></div>
