--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mon Tamagotchi</title>
+    <title>Mon Bébé Dragon</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Mon Bébé Dragon</h1>
     <div id="tamagotchi-container">
         <div id="tamagotchi">
-            <!-- Ajouter les ailes -->
             <div class="wing left-wing"></div>
             <div class="wing right-wing"></div>
             <!-- Ajouter les cornes -->
